# why-fp-matters

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
src/whyfp/: __init__.py  differentiation.py  integration.py  sqrt.py  util.py
tests/: test_differentiation.py  test_integration.py  test_placeholder.py  test_sqrt.py  test_util.py
