[project]
name = "whyfp"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["functional", "programming"]
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
authors = [{name = "Carlos Les"}]
urls = {source = "https://github.com/carlosles/why-fp-matters"}
dependencies = ["more-itertools"]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = []
test = ["hypothesis", "pytest", "pytest-xdist", "pytest-cov"]
dev = ["pre-commit", "whyfp[doc,test]"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "whyfp.__version__"}
description = {file = "whyfp.__init__.__docstring__"}

[tool.setuptools.packages]
find = {where = ["src"], namespaces = false}

[tool.ruff]
target-version = "py311"
fix = true
line-length = 105
src = ["src", "tests"]
ignore = [
    "E999",  # SyntaxError from unsupported pattern matching
    "D203",  # one blank line before class docstring
    "D204",  # one blank line after class docstring
    "D213",  # multi-line docstring summary start on second line
]
select = ["E", "F", "B", "Q", "TID", "PT", "D", "I", "C90"]
per-file-ignores = {"tests/*.py" = ["D"]}  # docstrings missing
flake8-quotes = {inline-quotes = "single", multiline-quotes = "single"}
flake8-tidy-imports = {ban-relative-imports = "all"}
isort = {combine-as-imports = true, force-sort-within-sections = true}
pydocstyle = {ignore-decorators = ["typing.overload"]}

[tool.black]
target-version = ["py311"]
line-length = 105
include = '\.pyi?$'
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
strict = true
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]
allow_untyped_decorators = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers -m 'not (slow)' --cov -n auto -p no:cacheprovider"
testpaths = ["tests"]
markers = ["slow"]
required_plugins = ["pytest-xdist", "pytest-cov"]
